Add dockerfile, readme, and point calculation.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
       "@/*": ["src/*"]
     },
     "typeRoots": ["./node_modules/@types", "./src/types"],
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "isolatedModules": true,
+    "allowSyntheticDefaultImports": true,
+    "allowJs": true
   },
   "ts-node": {
     "esm": true
