--- a/package.json
+++ b/package.json
@@ -8,37 +8,37 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc --project tsconfig.json",
     "start": "node dist/index.js",
-    "lint": "eslint . --config ../eslint.config.mjs",
-    "lint:fix": "eslint . --config ../eslint.config.mjs --fix",
-    "format": "prettier --write ."
+    "lint": "eslint . --config ./eslint.config.mjs",
+    "lint:fix": "eslint . --config ./eslint.config.mjs --fix",
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "argon2": "^0.41.1",
-    "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
-    "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.7",
+    "eslint-plugin-react": "^7.37.5",
     "express": "^4.21.1",
     "helmet": "^8.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.2",
-    "zod": "^3.24.2"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.9.3",
+    "@types/supertest": "^6.0.3",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
     "prettier": "^3.5.3",
-    "sha256": "^0.2.0",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
     "tsx": "^4.19.2",
     "typescript": "^5.6.2"
   }
